// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Rbt Dark 1`] = `
<View
  bg="defaultBackground"
  p={3}
  style={
    Array [
      Object {
        "backgroundColor": "#262523",
        "paddingBottom": 15,
        "paddingLeft": 15,
        "paddingRight": 15,
        "paddingTop": 15,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <View
      alignItems="center"
      flexDirection="row"
      mb={3}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginBottom": 15,
          },
        ]
      }
    >
      <View
        bg="#C4C4C4"
        borderRadius={8}
        height={64}
        overflow="hidden"
        style={
          Array [
            Object {
              "backgroundColor": "#C4C4C4",
              "borderRadius": 8,
              "height": 64,
              "overflow": "hidden",
              "width": 64,
            },
          ]
        }
        width={64}
      >
        <Image
          source={
            Object {
              "uri": "https://via.placeholder.com/200",
            }
          }
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
      <View
        flex={1}
        flexDirection="column"
        height={64}
        justifyContent="space-between"
        mx={3}
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexDirection": "column",
              "flexGrow": 1,
              "flexShrink": 1,
              "height": 64,
              "justifyContent": "space-between",
              "marginLeft": 15,
              "marginRight": 15,
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <Text
          color="primary"
          fontFamily="body"
          fontSize={3}
          fontWeight="bold"
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#FDCC26",
                "fontFamily": "Helvetica",
                "fontSize": 17,
                "fontWeight": "700",
              },
            ]
          }
        >
          Lối Nhỏ
        </Text>
        <Text
          color="lightText"
          fontFamily="body"
          fontSize={2}
          fontWeight="bold"
          mb={2.5}
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#AAAAAA",
                "fontFamily": "Helvetica",
                "fontSize": 14,
                "fontWeight": "700",
                "marginBottom": 2.5,
              },
            ]
          }
        >
          Ca sỹ: 
          Đen ft. Phương Anh Đào
        </Text>
        <Text
          color="lightText"
          fontFamily="body"
          fontSize={2}
          fontWeight="bold"
          mb={2.5}
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#AAAAAA",
                "fontFamily": "Helvetica",
                "fontSize": 14,
                "fontWeight": "700",
                "marginBottom": 2.5,
              },
            ]
          }
        >
          Tác giả: 
          Đen
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {},
        ]
      }
    >
      <View
        alignItems="center"
        borderBottomColor="#3D3D3F"
        borderBottomWidth={1}
        flexDirection="row"
        justifyContent="space-between"
        minHeight={44}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderBottomColor": "#3D3D3F",
              "borderBottomWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
            },
          ]
        }
      >
        <Text
          color="lightText"
          fontFamily="body"
          fontSize={2}
          fontWeight="bold"
          style={
            Array [
              Object {
                "color": "#AAAAAA",
                "fontFamily": "Helvetica",
                "fontSize": 14,
                "fontWeight": "700",
              },
            ]
          }
        >
          Mã nhạc chờ
        </Text>
        <View
          alignItems="flex-end"
          style={
            Array [
              Object {
                "alignItems": "flex-end",
              },
            ]
          }
        >
          <Text
            color="normalText"
            fontFamily="body"
            fontSize={2}
            fontWeight="bold"
            style={
              Array [
                Object {
                  "color": "white",
                  "fontFamily": "Helvetica",
                  "fontSize": 14,
                  "fontWeight": "700",
                },
              ]
            }
          >
            12342945
          </Text>
        </View>
      </View>
      <View
        alignItems="center"
        borderBottomColor="#3D3D3F"
        borderBottomWidth={1}
        flexDirection="row"
        justifyContent="space-between"
        minHeight={44}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderBottomColor": "#3D3D3F",
              "borderBottomWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
            },
          ]
        }
      >
        <Text
          color="lightText"
          fontFamily="body"
          fontSize={2}
          fontWeight="bold"
          style={
            Array [
              Object {
                "color": "#AAAAAA",
                "fontFamily": "Helvetica",
                "fontSize": 14,
                "fontWeight": "700",
              },
            ]
          }
        >
          Nhà cung cấp
        </Text>
        <View
          alignItems="flex-end"
          style={
            Array [
              Object {
                "alignItems": "flex-end",
              },
            ]
          }
        >
          <Text
            color="normalText"
            fontFamily="body"
            fontSize={2}
            fontWeight="bold"
            style={
              Array [
                Object {
                  "color": "white",
                  "fontFamily": "Helvetica",
                  "fontSize": 14,
                  "fontWeight": "700",
                },
              ]
            }
          >
            DTECH
          </Text>
        </View>
      </View>
      <View
        alignItems="center"
        borderBottomColor="#3D3D3F"
        borderBottomWidth={1}
        flexDirection="row"
        justifyContent="space-between"
        minHeight={44}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderBottomColor": "#3D3D3F",
              "borderBottomWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
            },
          ]
        }
      >
        <Text
          color="lightText"
          fontFamily="body"
          fontSize={2}
          fontWeight="bold"
          style={
            Array [
              Object {
                "color": "#AAAAAA",
                "fontFamily": "Helvetica",
                "fontSize": 14,
                "fontWeight": "700",
              },
            ]
          }
        >
          Giá
        </Text>
        <View
          alignItems="flex-end"
          style={
            Array [
              Object {
                "alignItems": "flex-end",
              },
            ]
          }
        >
          <Text
            color="primary"
            fontFamily="body"
            fontSize={2}
            fontWeight="bold"
            style={
              Array [
                Object {
                  "color": "#FDCC26",
                  "fontFamily": "Helvetica",
                  "fontSize": 14,
                  "fontWeight": "700",
                },
              ]
            }
          >
            3000
             đ/bài
          </Text>
          <Text
            color="lightText"
            fontFamily="body"
            fontSize={1}
            style={
              Array [
                Object {
                  "color": "#AAAAAA",
                  "fontFamily": "Helvetica",
                  "fontSize": 12,
                },
              ]
            }
          >
            *Đã bao gồm VAT
          </Text>
        </View>
      </View>
      <View
        alignItems="center"
        borderBottomColor="#3D3D3F"
        borderBottomWidth={1}
        flexDirection="row"
        justifyContent="space-between"
        minHeight={44}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderBottomColor": "#3D3D3F",
              "borderBottomWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
            },
          ]
        }
      >
        <Text
          color="lightText"
          fontFamily="body"
          fontSize={2}
          fontWeight="bold"
          style={
            Array [
              Object {
                "color": "#AAAAAA",
                "fontFamily": "Helvetica",
                "fontSize": 14,
                "fontWeight": "700",
              },
            ]
          }
        >
          Thời hạn sử dụng
        </Text>
        <View
          alignItems="flex-end"
          style={
            Array [
              Object {
                "alignItems": "flex-end",
              },
            ]
          }
        >
          <Text
            color="normalText"
            fontFamily="body"
            fontSize={2}
            fontWeight="bold"
            style={
              Array [
                Object {
                  "color": "white",
                  "fontFamily": "Helvetica",
                  "fontSize": 14,
                  "fontWeight": "700",
                },
              ]
            }
          >
            30
             ngày
          </Text>
        </View>
      </View>
      <View
        alignItems="center"
        borderBottomColor="#3D3D3F"
        borderBottomWidth={1}
        flexDirection="row"
        justifyContent="space-between"
        minHeight={44}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderBottomColor": "#3D3D3F",
              "borderBottomWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
            },
          ]
        }
      >
        <Text
          color="lightText"
          fontFamily="body"
          fontSize={2}
          fontWeight="bold"
          style={
            Array [
              Object {
                "color": "#AAAAAA",
                "fontFamily": "Helvetica",
                "fontSize": 14,
                "fontWeight": "700",
              },
            ]
          }
        >
          Ngày xuất bản
        </Text>
        <View
          alignItems="flex-end"
          style={
            Array [
              Object {
                "alignItems": "flex-end",
              },
            ]
          }
        >
          <Text
            color="normalText"
            fontFamily="body"
            fontSize={2}
            fontWeight="bold"
            style={
              Array [
                Object {
                  "color": "white",
                  "fontFamily": "Helvetica",
                  "fontSize": 14,
                  "fontWeight": "700",
                },
              ]
            }
          >
            20/09/2019
          </Text>
        </View>
      </View>
      <View
        alignItems="center"
        borderBottomColor="#3D3D3F"
        borderBottomWidth={1}
        flexDirection="row"
        justifyContent="space-between"
        minHeight={44}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderBottomColor": "#3D3D3F",
              "borderBottomWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
            },
          ]
        }
      >
        <Text
          color="lightText"
          fontFamily="body"
          fontSize={2}
          fontWeight="bold"
          style={
            Array [
              Object {
                "color": "#AAAAAA",
                "fontFamily": "Helvetica",
                "fontSize": 14,
                "fontWeight": "700",
              },
            ]
          }
        >
          Số lượt tải
        </Text>
        <View
          alignItems="flex-end"
          style={
            Array [
              Object {
                "alignItems": "flex-end",
              },
            ]
          }
        >
          <Text
            color="normalText"
            fontFamily="body"
            fontSize={2}
            fontWeight="bold"
            style={
              Array [
                Object {
                  "color": "white",
                  "fontFamily": "Helvetica",
                  "fontSize": 14,
                  "fontWeight": "700",
                },
              ]
            }
          >
            24015
             lượt
          </Text>
        </View>
      </View>
      <Text
        color="lightText"
        fontFamily="body"
        fontSize={1}
        pt={3}
        style={
          Array [
            Object {
              "color": "#AAAAAA",
              "fontFamily": "Helvetica",
              "fontSize": 12,
              "paddingTop": 15,
            },
          ]
        }
      >
        *Nhạc chờ sẽ tự động gia hạn sau khi hết thời hạn.
      </Text>
      <Text
        color="lightText"
        fontFamily="body"
        fontSize={1}
        style={
          Array [
            Object {
              "color": "#AAAAAA",
              "fontFamily": "Helvetica",
              "fontSize": 12,
            },
          ]
        }
      >
        Giá: 
        <Text
          color="secondary"
          fontFamily="body"
          fontSize={1}
          fontWeight="bold"
          pt={3}
          style={
            Array [
              Object {
                "color": "#22E26B",
                "fontFamily": "Helvetica",
                "fontSize": 12,
                "fontWeight": "700",
                "paddingTop": 15,
              },
            ]
          }
        >
          3000đ/bài/30ngày
        </Text>
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots Rbt Light 1`] = `
<View
  bg="defaultBackground"
  p={3}
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "paddingBottom": 15,
        "paddingLeft": 15,
        "paddingRight": 15,
        "paddingTop": 15,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <View
      alignItems="center"
      flexDirection="row"
      mb={3}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginBottom": 15,
          },
        ]
      }
    >
      <View
        bg="#C4C4C4"
        borderRadius={8}
        height={64}
        overflow="hidden"
        style={
          Array [
            Object {
              "backgroundColor": "#C4C4C4",
              "borderRadius": 8,
              "height": 64,
              "overflow": "hidden",
              "width": 64,
            },
          ]
        }
        width={64}
      >
        <Image
          source={
            Object {
              "uri": "https://via.placeholder.com/200",
            }
          }
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
      <View
        flex={1}
        flexDirection="column"
        height={64}
        justifyContent="space-between"
        mx={3}
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexDirection": "column",
              "flexGrow": 1,
              "flexShrink": 1,
              "height": 64,
              "justifyContent": "space-between",
              "marginLeft": 15,
              "marginRight": 15,
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <Text
          color="primary"
          fontFamily="body"
          fontSize={3}
          fontWeight="bold"
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#FDCC26",
                "fontFamily": "Helvetica",
                "fontSize": 17,
                "fontWeight": "700",
              },
            ]
          }
        >
          Lối Nhỏ
        </Text>
        <Text
          color="lightText"
          fontFamily="body"
          fontSize={2}
          fontWeight="bold"
          mb={2.5}
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#676767",
                "fontFamily": "Helvetica",
                "fontSize": 14,
                "fontWeight": "700",
                "marginBottom": 2.5,
              },
            ]
          }
        >
          Ca sỹ: 
          Đen ft. Phương Anh Đào
        </Text>
        <Text
          color="lightText"
          fontFamily="body"
          fontSize={2}
          fontWeight="bold"
          mb={2.5}
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#676767",
                "fontFamily": "Helvetica",
                "fontSize": 14,
                "fontWeight": "700",
                "marginBottom": 2.5,
              },
            ]
          }
        >
          Tác giả: 
          Đen
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {},
        ]
      }
    >
      <View
        alignItems="center"
        borderBottomColor="#3D3D3F"
        borderBottomWidth={1}
        flexDirection="row"
        justifyContent="space-between"
        minHeight={44}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderBottomColor": "#3D3D3F",
              "borderBottomWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
            },
          ]
        }
      >
        <Text
          color="lightText"
          fontFamily="body"
          fontSize={2}
          fontWeight="bold"
          style={
            Array [
              Object {
                "color": "#676767",
                "fontFamily": "Helvetica",
                "fontSize": 14,
                "fontWeight": "700",
              },
            ]
          }
        >
          Mã nhạc chờ
        </Text>
        <View
          alignItems="flex-end"
          style={
            Array [
              Object {
                "alignItems": "flex-end",
              },
            ]
          }
        >
          <Text
            color="normalText"
            fontFamily="body"
            fontSize={2}
            fontWeight="bold"
            style={
              Array [
                Object {
                  "color": "#262523",
                  "fontFamily": "Helvetica",
                  "fontSize": 14,
                  "fontWeight": "700",
                },
              ]
            }
          >
            12342945
          </Text>
        </View>
      </View>
      <View
        alignItems="center"
        borderBottomColor="#3D3D3F"
        borderBottomWidth={1}
        flexDirection="row"
        justifyContent="space-between"
        minHeight={44}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderBottomColor": "#3D3D3F",
              "borderBottomWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
            },
          ]
        }
      >
        <Text
          color="lightText"
          fontFamily="body"
          fontSize={2}
          fontWeight="bold"
          style={
            Array [
              Object {
                "color": "#676767",
                "fontFamily": "Helvetica",
                "fontSize": 14,
                "fontWeight": "700",
              },
            ]
          }
        >
          Nhà cung cấp
        </Text>
        <View
          alignItems="flex-end"
          style={
            Array [
              Object {
                "alignItems": "flex-end",
              },
            ]
          }
        >
          <Text
            color="normalText"
            fontFamily="body"
            fontSize={2}
            fontWeight="bold"
            style={
              Array [
                Object {
                  "color": "#262523",
                  "fontFamily": "Helvetica",
                  "fontSize": 14,
                  "fontWeight": "700",
                },
              ]
            }
          >
            DTECH
          </Text>
        </View>
      </View>
      <View
        alignItems="center"
        borderBottomColor="#3D3D3F"
        borderBottomWidth={1}
        flexDirection="row"
        justifyContent="space-between"
        minHeight={44}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderBottomColor": "#3D3D3F",
              "borderBottomWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
            },
          ]
        }
      >
        <Text
          color="lightText"
          fontFamily="body"
          fontSize={2}
          fontWeight="bold"
          style={
            Array [
              Object {
                "color": "#676767",
                "fontFamily": "Helvetica",
                "fontSize": 14,
                "fontWeight": "700",
              },
            ]
          }
        >
          Giá
        </Text>
        <View
          alignItems="flex-end"
          style={
            Array [
              Object {
                "alignItems": "flex-end",
              },
            ]
          }
        >
          <Text
            color="primary"
            fontFamily="body"
            fontSize={2}
            fontWeight="bold"
            style={
              Array [
                Object {
                  "color": "#FDCC26",
                  "fontFamily": "Helvetica",
                  "fontSize": 14,
                  "fontWeight": "700",
                },
              ]
            }
          >
            3000
             đ/bài
          </Text>
          <Text
            color="lightText"
            fontFamily="body"
            fontSize={1}
            style={
              Array [
                Object {
                  "color": "#676767",
                  "fontFamily": "Helvetica",
                  "fontSize": 12,
                },
              ]
            }
          >
            *Đã bao gồm VAT
          </Text>
        </View>
      </View>
      <View
        alignItems="center"
        borderBottomColor="#3D3D3F"
        borderBottomWidth={1}
        flexDirection="row"
        justifyContent="space-between"
        minHeight={44}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderBottomColor": "#3D3D3F",
              "borderBottomWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
            },
          ]
        }
      >
        <Text
          color="lightText"
          fontFamily="body"
          fontSize={2}
          fontWeight="bold"
          style={
            Array [
              Object {
                "color": "#676767",
                "fontFamily": "Helvetica",
                "fontSize": 14,
                "fontWeight": "700",
              },
            ]
          }
        >
          Thời hạn sử dụng
        </Text>
        <View
          alignItems="flex-end"
          style={
            Array [
              Object {
                "alignItems": "flex-end",
              },
            ]
          }
        >
          <Text
            color="normalText"
            fontFamily="body"
            fontSize={2}
            fontWeight="bold"
            style={
              Array [
                Object {
                  "color": "#262523",
                  "fontFamily": "Helvetica",
                  "fontSize": 14,
                  "fontWeight": "700",
                },
              ]
            }
          >
            30
             ngày
          </Text>
        </View>
      </View>
      <View
        alignItems="center"
        borderBottomColor="#3D3D3F"
        borderBottomWidth={1}
        flexDirection="row"
        justifyContent="space-between"
        minHeight={44}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderBottomColor": "#3D3D3F",
              "borderBottomWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
            },
          ]
        }
      >
        <Text
          color="lightText"
          fontFamily="body"
          fontSize={2}
          fontWeight="bold"
          style={
            Array [
              Object {
                "color": "#676767",
                "fontFamily": "Helvetica",
                "fontSize": 14,
                "fontWeight": "700",
              },
            ]
          }
        >
          Ngày xuất bản
        </Text>
        <View
          alignItems="flex-end"
          style={
            Array [
              Object {
                "alignItems": "flex-end",
              },
            ]
          }
        >
          <Text
            color="normalText"
            fontFamily="body"
            fontSize={2}
            fontWeight="bold"
            style={
              Array [
                Object {
                  "color": "#262523",
                  "fontFamily": "Helvetica",
                  "fontSize": 14,
                  "fontWeight": "700",
                },
              ]
            }
          >
            20/09/2019
          </Text>
        </View>
      </View>
      <View
        alignItems="center"
        borderBottomColor="#3D3D3F"
        borderBottomWidth={1}
        flexDirection="row"
        justifyContent="space-between"
        minHeight={44}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderBottomColor": "#3D3D3F",
              "borderBottomWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
            },
          ]
        }
      >
        <Text
          color="lightText"
          fontFamily="body"
          fontSize={2}
          fontWeight="bold"
          style={
            Array [
              Object {
                "color": "#676767",
                "fontFamily": "Helvetica",
                "fontSize": 14,
                "fontWeight": "700",
              },
            ]
          }
        >
          Số lượt tải
        </Text>
        <View
          alignItems="flex-end"
          style={
            Array [
              Object {
                "alignItems": "flex-end",
              },
            ]
          }
        >
          <Text
            color="normalText"
            fontFamily="body"
            fontSize={2}
            fontWeight="bold"
            style={
              Array [
                Object {
                  "color": "#262523",
                  "fontFamily": "Helvetica",
                  "fontSize": 14,
                  "fontWeight": "700",
                },
              ]
            }
          >
            24015
             lượt
          </Text>
        </View>
      </View>
      <Text
        color="lightText"
        fontFamily="body"
        fontSize={1}
        pt={3}
        style={
          Array [
            Object {
              "color": "#676767",
              "fontFamily": "Helvetica",
              "fontSize": 12,
              "paddingTop": 15,
            },
          ]
        }
      >
        *Nhạc chờ sẽ tự động gia hạn sau khi hết thời hạn.
      </Text>
      <Text
        color="lightText"
        fontFamily="body"
        fontSize={1}
        style={
          Array [
            Object {
              "color": "#676767",
              "fontFamily": "Helvetica",
              "fontSize": 12,
            },
          ]
        }
      >
        Giá: 
        <Text
          color="secondary"
          fontFamily="body"
          fontSize={1}
          fontWeight="bold"
          pt={3}
          style={
            Array [
              Object {
                "color": "#22E26B",
                "fontFamily": "Helvetica",
                "fontSize": 12,
                "fontWeight": "700",
                "paddingTop": 15,
              },
            ]
          }
        >
          3000đ/bài/30ngày
        </Text>
      </Text>
    </View>
  </View>
</View>
`;
